# ring3k

./: .gitignore  Make.rules.in  Makefile.in  README  TODO  configure  configure.ac  extract_disk.sh  gen-packagemap.pl  packagemap.xml  ring3k  ring3k-setup.in  ring3k.in  runit  runtest
documents/: faq.txt  install.txt  mingw-osx-install.txt
include/: config.h  config.h.in  ntstatus.h  ntsyscall.h  pshpack2.h  pshpack4.h  pshpack8.h  uisyscall.h  winnt.h  winternl.h
include/common/: ntgdi.h  ntuser.h
kernel/: .gitignore  Makefile.in  alloc_bitmap.cpp  alloc_bitmap.h  atom.cpp  bitmap.cpp  block.cpp  cairo_display.cpp  cairo_display.h  client.c  completion.cpp  debug.h  driver.cpp  event.cpp  fiber.cpp  fiber.h  fiber_test.cpp  file.cpp  file.h  job.cpp  kthread.cpp  list.h  mailslot.cpp  main.cpp  mem.cpp  mem.h  message.cpp  message.h  mutant.cpp  namedpipe.cpp  ntcall.cpp  ntcall.h  ntgdi.cpp  ntgdi.h  ntuser.cpp  ntuser.h  ntwin32.h  null_display.cpp  null_display.h  objdir.cpp  (+37 more)
libmspack/: .gitignore  Makefile.in  README  cabd.c  chmd.c  szddd.c
libntreg/: .gitignore  Makefile.in  ntreg.c  ntreg.h
libudis86/: .gitignore  Makefile.in
loader/: .gitignore  Makefile.in  block.cpp  client.c  client.h  completion.cpp  count_args.pl  debug.cpp  driver.cpp  enc.c  event.cpp  event.h  extract_disk.sh  fiber.cpp  file.cpp  file.h  kthread.cpp  mailslot.cpp  mem.cpp  mem.h  mutant.cpp  namedpipe.cpp  ntcall.cpp  ntcall.h  ntgdi.cpp  ntgdi.h  ntl.cpp  ntuser.cpp  ntuser.h  objdir.cpp  objdir.h  object.cpp  object.h  platform.cpp  platform.h  port.cpp  process.cpp  process.h  profile.cpp  ptrace_base.cpp  (+27 more)
programs/: Makefile.in
programs/clock/: .gitignore  Makefile.in  clock.c
programs/minitris/: .gitignore  Makefile.in  minitris.c
programs/minshell/: .gitignore  Makefile.in  minshell.c
programs/pixels/: .gitignore  Makefile.in  pixels.c
programs/winemine/: Makefile.in  main.c  rsrc.rc
programs/winlogon/: Makefile.in  winlogon.c
regedit/: .gitignore  Makefile.in  main.cpp  regedit.cpp  regedit.pro  registryeditor.cpp  registryeditor.h  registryitem.cpp  registryitem.h  registrymodel.cpp  registrymodel.h  registrytreeview.cpp  registrytreeview.h  registryvalue.cpp  registryvalue.h
tests/: .gitignore  Makefile.in  atom.c  completion.c  device.c  event.c  eventpair.c  file.c  font.c  gdi.c  gen_syscalls.pl  heap.c  hostnt.c  job.c  key.c  log.c  log.h  mailslot.c  mutant.c  native.c  ntapi.h  ntwin32.h  object.c  pipe.c  port.c  process.c  ps.c  qdf.c  reg.c  rtlapi.h  runnt.c  section.c  seh.c  sema.c  smss.c  syscall.c  thread.c  timer.c  token.c  user.c  (+3 more)
tests/win2k/: ntwin32.in
tests/winxp/: ntwin32.in
tools/: Makefile.in  README  advapi32.c  analogclock.c  ccmd.c  console.c  dumphandles.c  hello.c  minitris.c  pixels.c  qdf.c  startcmd.c  track.c  winlogon.c
unpack/: .gitignore  Makefile.in  unpack.c
winemine/: .gitignore  Makefile.in  main.c
